<resources>
    <string name="app_name">Agora API Example(Audio)</string>
    <string name="channel_id">Channel ID</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="earpiece">Earpiece</string>
    <string name="speaker">Speaker</string>
    <string name="openmicrophone">OpenMicrophone</string>
    <string name="closemicrophone">CloseMicrophone</string>

    <string name="chanel_support_char" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890 !#$%()+-:;&lt;=.>?@[]^_{}|~,&amp;</string>

    <string name="setting">Setting</string>
    <string name="sdkversion">SDK Version</string>
    <string name="sdkversion1">V%s</string>
    <string name="mixing_volume">Mixing Volume</string>
    <string name="_3d_voice_circle_in_second">3D Voice Circle in Second</string>
    <string name="next">Next Step</string>
    <string name="microphone">Microphone</string>
    <string name="publish_local_audio">Publish Local Audio</string>

    <string name="item_joinaudio">Live Interactive Audio Streaming</string>
    <string name="item_joinaudio_by_token">Live Interactive Audio Streaming(Token Verify)</string>
    <string name="item_quickswitck">Quick Switch Channel</string>
    <string name="item_precalltest">Pre-call Tests</string>
    <string name="item_playaudiofiles">Play Audio Files</string>
    <string name="item_voiceeffects">Set the Voice Beautifier and Effects</string>
    <string name="item_audiowaveform">Audio Waveform</string>

    <string name="item_customaudiosource">Custom Audio Sources</string>
    <string name="item_customaudiorender">Custom Audio Render</string>
    <string name="item_raw_audio">Raw Audio Data</string>
    <string name="item_spatial_sound">Spatial Audio</string>
    <string name="item_audio_safety">Audio Safety</string>

    <string name="joinchannelaudio">This example demonstrates how to use the SDK to join channels for voice only calls.</string>
    <string name="joinchannelaudioByToken">This example demonstrates how to use the SDK to join channels with token for voice only calls.</string>
    <string name="precalltest">This example demonstrates how to use the SDK to check uplink network condition before joining the  channel.</string>
    <string name="customaudio">This example demonstrates how to use mediaOption API to publish microphone and custom audio source. </string>
    <string name="customaudiorender">This example demonstrates how to customize the functions of the remote audio stream renderer during audio and video calls. </string>
    <string name="playaudiofiles">This example demonstrates how to play and manage audio effect and audio mixing files.</string>
    <string name="voiceeffects">This example demonstrates how to use embedded audio effects in SDK.</string>
    <string name="rawaudio">This example shows how to register Audio Observer to engine for extract raw audio data during RTC communication.</string>
    <string name="rhythmplayer">This example shows how to use virtual rhythm player for during RTC communication.</string>
    <string name="audio_safety">This example shows how to implement audio security/moderation features, allowing
        users to report “bad actors” in voice chats and upload the last 5 minutes of audio evidence from that user..</string>
    <string name="writeback">Write Back Audio</string>
    <string name="spatial_sound">This example shows how to use spaital sound</string>
    <string name="start">Start</string>
    <string name="click_start">Start</string>
    <string name="resume">Resume</string>
    <string name="mixing_publish_vol">Mixing Publish Vol</string>
    <string name="mixing_playout_vol">Mixing Playout Vol</string>
    <string name="audio_effects_vol">Audio Effects Vol</string>
    <string name="spatial_sound_tip">Please insert headphones to experience the spatial audio effect</string>
    <string name="audiorouter_palyer">This example shows the behavior of audio router while communicating with rtc.</string>
    <string name="permission">Please granted the request permissions</string>

    <string name="item_rhythmplayer">Rhythm Player</string>
    <string name="beats_per_measure">Beats per Measure</string>
    <string name="beats_per_minute">Beats per Minute</string>
    <string name="token" translatable="false">Token</string>
    <string name="token_invalid">The token is invalid.</string>
    <string name="token_expired">The token is expired.</string>

    <string name="private_clound">Private Cloud</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_address_input_hint">please input IP</string>
    <string name="log_report">Log Report</string>
    <string name="log_server_domain">Log Server Domain</string>
    <string name="log_server_domain_input_hint">Please input log server domain</string>
    <string name="log_server_port">Log Server Port</string>
    <string name="log_server_port_input_hint">Please input log server port</string>
    <string name="log_server_path">Log Server Path</string>
    <string name="log_server_path_input_hint">Please input log server path</string>
    <string name="use_https">Use Https</string>

    <string name="area">Area</string>
    <string name="spatial_audio_zone">Audio Zone</string>
    <string name="spatial_audio_room">Room</string>
    <string name="mute_auido">Mute Audio</string>
    <string name="save">Save</string>
    <string name="app_id" translatable="false">App ID</string>
    <string name="app_id_empty">The App ID is empty!</string>
    <string name="channel_profile_communication" translatable="false">COMMUNICATION</string>
    <string name="channel_profile_live_broadcasting" translatable="false">LIVE_BROADCASTING</string>
    <string name="channel_profile_game" translatable="false">GAME</string>
    <string name="channel_profile_cloud_gaming" translatable="false">CLOUD_GAMING</string>
    <string name="channel_profile_communication_1v1" translatable="false">COMMUNICATION_1v1</string>
    <string name="audio_route_default">default</string>
    <string name="audio_route_speakerphone">speakerphone</string>
    <string name="audio_route_earpiece">earpiece</string>
    <string name="audio_route_headset">headset</string>
    <string name="audio_route_headset_typec">headset(TypeC)</string>
    <string name="audio_route_headset_bluetooth">bluetooth headset</string>
    <string name="notifications_enable_tip">Please turn on notification permission to prevent background recording from being interrupted.</string>
    <string name="the_example_feature_tips">This example demonstrates how to use the SDK to implement voice call functionality.</string>
</resources>
