<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/private_clound"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ip_address"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/et_ip_address"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address_input_hint"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_report"
            android:textSize="16sp" />


        <Switch
            android:id="@+id/sw_log_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_server_domain"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/et_log_server_domain"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/log_server_domain_input_hint"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_server_port"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/et_log_server_port"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/log_server_port_input_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_server_path"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/et_log_server_path"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/log_server_path_input_hint"
            android:singleLine="true"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/use_https"
            android:textSize="16sp" />


        <Switch
            android:id="@+id/sw_use_https"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>


